@@ -20,9 +20,10 @@ defaults.bluealsa.service "org.bluealsa"
 # Default for mixer is to show all PCMs
 defaults.bluealsa.ctl.device "FF:FF:FF:FF:FF:FF"
 defaults.bluealsa.ctl.battery "yes"
+defaults.bluealsa.ctl.dynamic "yes"
 
 ctl.bluealsa {
-	@args [ DEV BAT SRV ]
+	@args [ DEV BAT DYN SRV ]
 	@args.DEV {
 		type string
 		default {
@@ -37,6 +38,13 @@ ctl.bluealsa {
 			name defaults.bluealsa.ctl.battery
 		}
 	}
+	@args.DYN {
+		type string
+		default {
+			@func refer
+			name defaults.bluealsa.ctl.dynamic
+		}
+	}
 	@args.SRV {
 		type string
 		default {
@@ -47,6 +55,7 @@ ctl.bluealsa {
 	type bluealsa
 	device $DEV
 	battery $BAT
+	dynamic $DYN
 	service $SRV
 	hint {
 		show {
